tidy up and fixed scrollbar issue

--- a/app/styles/node-editor-time-input.css
+++ b/app/styles/node-editor-time-input.css
@@ -1,4 +1,4 @@
-#time-input-container {
+.time-input-container {
   background-color: green;
   position: fixed;
   bottom: 0;
